unpackaged/main/default/objects/Lead/fields/Abandoned_Form_Email_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Form_Email_Step_2__c</fullName>
    <formula>"https://emcfinancial.com/apply-now.php?lid=" +  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit In Application Form</label>
    <type>Text</type>
</CustomField>