unpackaged/main/default/objects/Lead/fields/Abandoned_Form_Email_Step_3__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Form_Email_Step_3__c</fullName>
    <formula>"http://dev11120-lendfully.cs45.force.com/ApplicationForm"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandoned Form Email - Step 3</label>
    <type>Text</type>
</CustomField>