unpackaged/main/default/objects/Lead/fields/Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Activity_Count__c</fullName>
    <description>This will contain the number of calls/activities logged on each lead.</description>
    <inlineHelpText>Total count of Logged Calls and Activities.</inlineHelpText>
    <label>Activity Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>