unpackaged/main/default/objects/Lead/fields/Additional_Number__c.field-meta.xml
<CustomField>
    <fullName>Additional_Number__c</fullName>
    <label>Additional Number</label>
    <type>TextArea</type>
</CustomField>