unpackaged/main/default/objects/Lead/fields/Addl_Contact__c.field-meta.xml
<CustomField>
    <fullName>Addl_Contact__c</fullName>
    <description>This will be for additional contacts at the same lead.</description>
    <inlineHelpText>Enter additional contacts associated with this lead.E.g. Mike Smith (111) 333-3333</inlineHelpText>
    <label>Addl Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>