unpackaged/main/default/objects/Lead/fields/Annual_Gross_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Gross_Sales__c</fullName>
    <description>Total annual sales amount.</description>
    <label>Annual Gross Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>