unpackaged/main/default/objects/Lead/fields/Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales__c</fullName>
    <label>Annual Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>