unpackaged/main/default/objects/Lead/fields/App_Recived__c.field-meta.xml
<CustomField>
    <fullName>App_Recived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App Recived</label>
    <type>Checkbox</type>
</CustomField>