unpackaged/main/default/objects/Lead/fields/App_Sent__c.field-meta.xml
<CustomField>
    <fullName>App_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App Sent</label>
    <type>Checkbox</type>
</CustomField>