unpackaged/main/default/objects/Lead/fields/Appointment_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Formula__c</fullName>
    <formula>DATEVALUE(Appointment_Time_and_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Date (Formula)</label>
    <type>Date</type>
</CustomField>