unpackaged/main/default/objects/Lead/fields/Appointment_Setter__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Setter__c</fullName>
    <label>Appointment Setter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>