unpackaged/main/default/objects/Lead/fields/Appointment_Time_and_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time_and_Date__c</fullName>
    <label>Appointment Time and Date</label>
    <type>DateTime</type>
</CustomField>