unpackaged/main/default/objects/Lead/fields/Appointment_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time_Zone__c</fullName>
    <label>Appointment Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eastern Time</fullName>
            </value>
            <value>
                <fullName>Central Time</fullName>
            </value>
            <value>
                <fullName>Mountain Time</fullName>
            </value>
            <value>
                <fullName>Pacific Time</fullName>
            </value>
            <value>
                <fullName>Hawaii Time</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>