unpackaged/main/default/objects/Lead/fields/Approximate_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Credit_Score__c</fullName>
    <label>Approximate Credit Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good, Fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>