unpackaged/main/default/objects/Lead/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <label>Attempts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Try 1</fullName>
            </value>
            <value>
                <fullName>Try 2</fullName>
            </value>
            <value>
                <fullName>Try 3</fullName>
            </value>
            <value>
                <fullName>Try 4</fullName>
            </value>
            <value>
                <fullName>Try 5</fullName>
            </value>
            <value>
                <fullName>Try 6</fullName>
            </value>
            <value>
                <fullName>Try 7</fullName>
            </value>
            <value>
                <fullName>Try 8</fullName>
            </value>
            <value>
                <fullName>Try 9</fullName>
            </value>
            <value>
                <fullName>Try 10</fullName>
            </value>
            <value>
                <fullName>Override – Attempting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>