unpackaged/main/default/objects/Lead/fields/Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Balance__c</fullName>
    <label>Average Daily Balance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>below 1000</fullName>
            </value>
            <value>
                <fullName>1000 +</fullName>
            </value>
            <value>
                <fullName>3000 +</fullName>
            </value>
            <value>
                <fullName>5000 +</fullName>
            </value>
            <value>
                <fullName>10000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>