unpackaged/main/default/objects/Lead/fields/Average_Monthly_CC__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_CC__c</fullName>
    <label>Average Monthly CC’s</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 10K</fullName>
            </value>
            <value>
                <fullName>10K - 20K</fullName>
            </value>
            <value>
                <fullName>21K - 40K</fullName>
            </value>
            <value>
                <fullName>40K - 100K</fullName>
            </value>
            <value>
                <fullName>100K+</fullName>
            </value>
            <value>
                <fullName>No CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>