unpackaged/main/default/objects/Lead/fields/Best_Time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Call__c</fullName>
    <label>Best Time to Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before 9am</fullName>
            </value>
            <value>
                <fullName>9am to 11am</fullName>
            </value>
            <value>
                <fullName>11am to 2:30pm</fullName>
            </value>
            <value>
                <fullName>2:30pm to 5pm</fullName>
            </value>
            <value>
                <fullName>After 5pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>