unpackaged/main/default/objects/Lead/fields/Bus_Days_Last_Activity_To_Converted__c.field-meta.xml
<CustomField>
    <fullName>Bus_Days_Last_Activity_To_Converted__c</fullName>
    <formula>Bus_Hours_Last_Activity_To_Converted__c / 8.33</formula>
    <label>Bus. Days - Last Activity To Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>