unpackaged/main/default/objects/Lead/fields/Bus_Days_Until_Converted__c.field-meta.xml
<CustomField>
    <fullName>Bus_Days_Until_Converted__c</fullName>
    <formula>Bus_Hours_Until_Converted__c/ 8.33</formula>
    <label>Bus. Days Until Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>