unpackaged/main/default/objects/Lead/fields/Bus_Hours_App_Sent_Until_Converted__c.field-meta.xml
<CustomField>
    <fullName>Bus_Hours_App_Sent_Until_Converted__c</fullName>
    <label>Bus. Hours - App Sent Until Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>