unpackaged/main/default/objects/Lead/fields/Bus_Hours_Last_Activity_To_Converted__c.field-meta.xml
<CustomField>
    <fullName>Bus_Hours_Last_Activity_To_Converted__c</fullName>
    <label>Bus. Hours - Last Activity To Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>