unpackaged/main/default/objects/Lead/fields/Bus_Hours_Until_Closed__c.field-meta.xml
<CustomField>
    <fullName>Bus_Hours_Until_Closed__c</fullName>
    <label>Bus. Hours Until Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>