unpackaged/main/default/objects/Lead/fields/Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Address__c</fullName>
    <description>This field is mapped to the Legal Address field on the Account Object upon conversion</description>
    <label>Business Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>