unpackaged/main/default/objects/Lead/fields/Business_City__c.field-meta.xml
<CustomField>
    <fullName>Business_City__c</fullName>
    <description>This field is mapped to the Legal City field on the Account Object upon conversion</description>
    <label>Business City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>