unpackaged/main/default/objects/Lead/fields/Business_State__c.field-meta.xml
<CustomField>
    <fullName>Business_State__c</fullName>
    <description>This field is mapped to the Legal State field on the Account Object upon conversion</description>
    <label>Business State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>