unpackaged/main/default/objects/Lead/fields/Business_Zip__c.field-meta.xml
<CustomField>
    <fullName>Business_Zip__c</fullName>
    <description>This field is mapped to the Legal Zip field on the Account Object upon conversion</description>
    <label>Business Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>