unpackaged/main/default/objects/Lead/fields/Call_Center_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Center Agent Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Call Center Agent Name)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>