unpackaged/main/default/objects/Lead/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>