unpackaged/main/default/objects/Lead/fields/CEO_FirstName__c.field-meta.xml
<CustomField>
    <fullName>CEO_FirstName__c</fullName>
    <label>CEO_FirstName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>