unpackaged/main/default/objects/Lead/fields/CEO_LastName__c.field-meta.xml
<CustomField>
    <fullName>CEO_LastName__c</fullName>
    <label>CEO_LastName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>