unpackaged/main/default/objects/Lead/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>Character</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>nice guy</fullName>
            </value>
            <value>
                <fullName>curious</fullName>
            </value>
            <value>
                <fullName>angry</fullName>
            </value>
            <value>
                <fullName>heavy accent foreigner</fullName>
            </value>
            <value>
                <fullName>Get to the point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>