unpackaged/main/default/objects/Lead/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>It should have the values for why the lead was closed.</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Repayment Method</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Seeking Traditional Loan</fullName>
            </value>
            <value>
                <fullName>No need</fullName>
            </value>
            <value>
                <fullName>Needs more funds</fullName>
            </value>
            <value>
                <fullName>Startup Biz</fullName>
            </value>
            <value>
                <fullName>Low sales Volume</fullName>
            </value>
            <value>
                <fullName>Industry Type</fullName>
            </value>
            <value>
                <fullName>Doesn't Own business</fullName>
            </value>
            <value>
                <fullName>Incomplete Info</fullName>
            </value>
            <value>
                <fullName>Test Lead</fullName>
            </value>
            <value>
                <fullName>Doesn't Exist</fullName>
            </value>
            <value>
                <fullName>Unidentified Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>