unpackaged/main/default/objects/Lead/fields/Closed_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason_Description__c</fullName>
    <description>Description for closing a lead. Required when closing out a lead.</description>
    <label>Closed Reason Description</label>
    <type>TextArea</type>
</CustomField>