unpackaged/main/default/objects/Lead/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <label>Closer</label>
    <length>15</length>
    <type>Text</type>
</CustomField>