unpackaged/main/default/objects/Lead/fields/Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date__c</fullName>
    <description>The Date on which Lead has been Contacted.</description>
    <label>Contact Date</label>
    <type>DateTime</type>
</CustomField>