unpackaged/main/default/objects/Lead/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field decides whether a Lead has been Contacted or not.</description>
    <label>Contacted</label>
    <type>Checkbox</type>
</CustomField>