unpackaged/main/default/objects/Lead/fields/Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead__c</fullName>
    <defaultValue>'Yes'</defaultValue>
    <description>This Field allows us to know when opportunities originate from leads and trigger a workflow upon conversion.</description>
    <label>Converted Lead</label>
    <length>3</length>
    <type>Text</type>
</CustomField>