unpackaged/main/default/objects/Lead/fields/Created_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Created From Lead (Field For Mapping)</label>
    <type>Checkbox</type>
</CustomField>