unpackaged/main/default/objects/Lead/fields/Created_Reignited_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Reignited_Date__c</fullName>
    <formula>IF ( NOT(ISNULL(Date_Lead_Reignited__c)) &amp;&amp; Date_Lead_Reignited__c &gt; DATEVALUE(CreatedDate) ,  Date_Lead_Reignited__c,  DATEVALUE(CreatedDate) )</formula>
    <label>Created / Reignited Date</label>
    <type>Date</type>
</CustomField>