unpackaged/main/default/objects/Lead/fields/Date_App_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_App_Received__c</fullName>
    <inlineHelpText>This will be auto populated by a workflow rule when the app is received.</inlineHelpText>
    <label>Date App Received</label>
    <type>DateTime</type>
</CustomField>