unpackaged/main/default/objects/Lead/fields/Date_App_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_App_Sent__c</fullName>
    <label>Date App Sent</label>
    <type>DateTime</type>
</CustomField>