unpackaged/main/default/objects/Lead/fields/Date_Business_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Business_Established__c</fullName>
    <label>Date Business Established</label>
    <type>Date</type>
</CustomField>