unpackaged/main/default/objects/Lead/fields/Date_Lead_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Received__c</fullName>
    <label>Date Lead Received</label>
    <type>DateTime</type>
</CustomField>