unpackaged/main/default/objects/Lead/fields/Date_Lead_Reignited__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Reignited__c</fullName>
    <description>This is a date used for old leads that we started to work with again after a whie</description>
    <label>Date Lead Reignited</label>
    <type>Date</type>
</CustomField>