unpackaged/main/default/objects/Lead/fields/Date_of_Birth_1__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_1__c</fullName>
    <label>Date of Birth(1)</label>
    <type>Date</type>
</CustomField>