unpackaged/main/default/objects/Lead/fields/Days_From_Creation__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Creation__c</fullName>
    <formula>IF(
  ISNULL(Bus_Days_Until_Converted__c),
    IF(
    ISNULL(Bus_Days_Until_Closed__c),
    (NOW() - CreatedDate),
    Bus_Days_Until_Closed__c
    ),
  Bus_Days_Until_Converted__c
)</formula>
    <label>Days From Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>