unpackaged/main/default/objects/Lead/fields/Days_Since_App_Sent__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_App_Sent__c</fullName>
    <formula>TODAY() -  DATEVALUE(Date_App_Sent__c)</formula>
    <label># Days Since App Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>