unpackaged/main/default/objects/Lead/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <formula>IF(
  ISNULL(Bus_Days_Last_Activity_To_Converted__c),
    IF(
    ISNULL(Bus_Days_Last_Activity_Until_Closed__c),
      IF(ISNULL(LastActivityDate),
      NULL,
      NOW() -  
      DATETIMEVALUE(
      TEXT(YEAR(LastActivityDate))&amp;"-"&amp;
      TEXT(MONTH(LastActivityDate))&amp;"-"&amp;
      TEXT(DAY(LastActivityDate)) &amp;" "&amp; 
      "00:00:00"
      )) 
    ,
    Bus_Days_Last_Activity_Until_Closed__c
    ),
  Bus_Days_Last_Activity_To_Converted__c
)</formula>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>