unpackaged/main/default/objects/Lead/fields/Delivery_Point_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Point_Barcode__c</fullName>
    <description>This can be used if we need to send out mass mail sometimes - it should be hidden</description>
    <label>Delivery Point Barcode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>