unpackaged/main/default/objects/Lead/fields/Description_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Business__c</fullName>
    <label>Description of Business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>