unpackaged/main/default/objects/Lead/fields/Dialer_List_No__c.field-meta.xml
<CustomField>
    <fullName>Dialer_List_No__c</fullName>
    <label>Dialer List No</label>
    <type>TextArea</type>
</CustomField>